SOFTWARE/OS VERSIONS Windows: macOS: Linux/KDE Plasma: (available in About System) KDE Plasma Version: KDE Frameworks Version: Qt Version: ADDITIONAL INFORMATION
Git commit 0b55533f1bd2b226446020857e2c04c12a1c5105 by Dag Andersen. Committed on 21/04/2020 at 06:13. Pushed by danders into branch 'master'. Chart: Bug 420328 - Layout does not handle axis titles on the same side of the plotarea FIXED-IN: 3.1.90 M +255 -73 plugins/chartshape/ChartLayout.cpp M +2 -0 plugins/chartshape/ChartLayout.h https://commits.kde.org/calligra/0b55533f1bd2b226446020857e2c04c12a1c5105