Chart: Bug 420328 - Layout does not handle axis titles on the same side of the plotarea

BUG: 420328
FIXED-IN: 3.1.90